<resources>
    <string name="app_name">Epam Training 😅</string>

    <string name="available_lessons_text">Available lessons</string>
    <string name="theme_android_components">Android Components</string>
    <string name="theme_clean_code">Clean Code</string>
    <string name="theme_java_basics">JAVA Basics</string>
    <string name="theme_android_studio">Android Studio tools</string>
    <string name="theme_github">Github</string>
    <string name="theme_android_compound_view">Android Compound View</string>
    <string name="theme_android_recycler_view">Android Recycler View</string>
    <string name="theme_android_ui">Android UI</string>
    <string name="theme_kotlin">Android Kotlin</string>
    <string name="lector_name_artem">Artem</string>
    <string name="lector_name_egor">Egor</string>
    <string name="lector_name_misha">Misha</string>
    <string name="lector_name_dima">Dima</string>

    <string name="profile_name">Name Surname</string>
    <string name="profile_status_online">Online</string>
    <string name="edit_button">Edit</string>
    <string name="message_text_view">Any text</string>
    <string name="friends_number">7 friends</string>
    <string name="home_place">Lives in jungle</string>
    <string name="show_info">Show info</string>
    <string name="whats_new_feed">What\'s new?</string>
    <string name="photos_text_view">Photos</string>
    <string name="menu_search">Search</string>
    <string name="menu_news">News</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_notification">Notification</string>
    <string name="options_menu_action_one">Action one</string>
    <string name="options_menu_action_two">Action two</string>

    <string name="google_podcasts">Podcasts</string>
    <string name="card_view_name">For you</string>
    <string name="new_episodes">New episodes</string>
    <string name="in_progress">In progress</string>
    <string name="downloads">Downloads</string>
    <string name="podcast_name1">Veni</string>
    <string name="podcast_name2">Vidi</string>
    <string name="podcast_name3">Vici</string>
    <string name="veni_podcast_publication_date">4 days ago</string>
    <string name="vidi_podcast_publication_date">3 days ago</string>
    <string name="vici_podcast_publication_date">2 days ago</string>

</resources>
