<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/message_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_message"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/message_view"
        android:layout_marginStart="15dp"
        android:text="@string/message_text_view"/>

    <ImageView
        android:id="@+id/friends_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_view"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_friends"/>

    <TextView
        android:id="@+id/friends_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_text"
        android:layout_toEndOf="@id/message_view"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/friends_number"/>

    <ImageView
        android:id="@+id/home_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friends_view"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_home"/>

    <TextView
        android:id="@+id/place_to_live_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friends_text"
        android:layout_toEndOf="@id/home_view"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/home_place"/>

    <ImageView
        android:id="@+id/show_info_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_view"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_more_horiz"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_below="@id/place_to_live_text"
        android:layout_toEndOf="@id/show_info_view"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/show_info"
        android:background="@android:color/transparent"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/first_friend"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@id/friends_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/friend_3_image"/>

    <ImageView
        android:id="@+id/second_friend"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@id/friends_text"
        android:layout_toStartOf="@id/first_friend"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/friend_2_image"/>

    <ImageView
        android:id="@+id/third_friend"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@id/friends_text"
        android:layout_toStartOf="@id/second_friend"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/friend_1_image"/>

</RelativeLayout>