<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_item_background">

            <ImageView
                android:id="@+id/first_podcast_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/podcast_image_1"/>

            <TextView
                android:id="@+id/podcast_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/first_podcast_image"
                android:text="@string/podcast_name1"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/real_black"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/podcast_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/first_podcast_image"
                android:layout_below="@id/podcast_name_textview"
                android:text="@string/veni_podcast_publication_date"
                android:textSize="20sp"
                android:textColor="@color/real_gray"
                android:layout_marginStart="5dp"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_play_circle_outline"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_item_background">

            <ImageView
                android:id="@+id/second_podcast_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/podcast_image_2"/>

            <TextView
                android:id="@+id/podcast_name_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/second_podcast_image"
                android:text="@string/podcast_name2"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/real_black"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/podcast_date_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/second_podcast_image"
                android:layout_below="@id/podcast_name_textview2"
                android:text="@string/vidi_podcast_publication_date"
                android:textSize="20sp"
                android:textColor="@color/real_gray"
                android:layout_marginStart="5dp"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_play_circle_outline"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_item_background">

            <ImageView
                android:id="@+id/third_podcast_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/podcast_image_1"/>

            <TextView
                android:id="@+id/podcast_name_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/third_podcast_image"
                android:text="@string/podcast_name3"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/real_black"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/podcast_date_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/third_podcast_image"
                android:layout_below="@id/podcast_name_textview3"
                android:text="@string/vici_podcast_publication_date"
                android:textSize="20sp"
                android:textColor="@color/real_gray"
                android:layout_marginStart="5dp"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_play_circle_outline"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>